chore(security): 优化字段加密主密钥配置与依赖注入
- 新增 FieldEncryptionProperties 声明字段加密主密钥配置并校验长度
- 修改 FieldEncryptionService 依赖注入，改用 FieldEncryptionProperties
- 增加对字段加密主密钥长度不够时抛出异常的检查和单元测试验证
- 在配置文件中新增安全相关密钥的占位环境变量支持，避免硬编码
- .env.example 模板新增本地开发秘钥示例，强调生产环境秘钥的独立性和安全要求
- 更新应用中对 token-secret、sso-state-secret、字段加密主密钥的注入方式
- 删除 AgentRuntimeService 中废弃的 SystemCapabilityRepository 及相关调用
- 优化 AgentRuntimeService 代码简化，移除 executeStreaming 旧版本实现
- 调整 AgentRuntimeServiceTest 测试代码，兼容修改后的接口调用和断言方式
- 修改 application.yml 使 Spring Profile 通过环境变量动态激活
- docs/architecture.md 补充字段加密主密钥管理与生命周期说明
- 其他代码及测试的细节清理和格式调整